# claude-meet-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
claude_meet/: auth.py  calendar_client.py  claude_client.py  cli.py  config.py  errors.py  mcp_server.py  scheduler.py  utils.py
scripts/: install.bat  install.ps1  install.sh
tests/: test_cli.py  test_errors.py  test_scheduler.py  test_utils.py
